Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16596

ERROR: Cannot write to mysqld's stdin

Details

    Description

      I got "ERROR: Cannot write to mysqld's stdin" when trying to install by "mysql_install_db.exe --datadir=C:\mariadb --service=mariadb....." even msi installer get error code 1603 and rooling back.

      I did all my best to install and I tried above by administrator user.

      Attachments

        1. Capture.PNG
          120 kB
          Mohammed Alfayez
        2. log.txt
          1.51 MB
          Mohammed Alfayez

        Issue Links

          Activity

            wlad Vladislav Vaintroub added a comment - - edited

            Did you install?

            If this failed, coulld you collect installer logs? https://mariadb.com/kb/en/library/installing-mariadb-msi-packages-on-windows/#installation-logs describes how to.

            wlad Vladislav Vaintroub added a comment - - edited Did you install? If this failed, coulld you collect installer logs? https://mariadb.com/kb/en/library/installing-mariadb-msi-packages-on-windows/#installation-logs describes how to.

            here is the last few lines of the log and i attached the log file

            Action 4:47:38: CreateShortcuts. Creating shortcuts
            MSI (s) (7C:5C) [04:47:38:928]: Executing op: SetTargetFolder(Folder=23\MariaDB 10.3 (x64))
            MSI (s) (7C:5C) [04:47:38:928]: SHELL32::SHGetFolderPath returned: C:\ProgramData\Microsoft\Windows\Start Menu\Programs
            MSI (s) (7C:5C) [04:47:38:928]: Executing op: ShortcutCreate(Name=hjcjcpxn|my.ini (MariaDB 10.3 (x64)),,,FileName=C:\Windows\system32\notepad.exe,Arguments="C:\Program Files\MariaDB 10.3\data\my.ini",,,,,,Description=Edit database configuration,,,,)
            CreateShortcuts: Shortcut: hjcjcpxn|my.ini (MariaDB 10.3 (x64))
            MSI (s) (7C:5C) [04:47:38:928]: Note: 1: 1402 2: HKEY_CLASSES_ROOT\.3 (x64)) 3: 2
            MSI (s) (7C:5C) [04:47:38:951]: Executing op: ShortcutCreate(Name=moc4xjbe|Error log (MariaDB 10.3 (x64)),,,FileName=C:\Windows\system32\notepad.exe,Arguments="C:\Program Files\MariaDB 10.3\data\DESKTOP-73DO6HI.err",,,,,,Description=View Database Error log,,,,)
            CreateShortcuts: Shortcut: moc4xjbe|Error log (MariaDB 10.3 (x64))
            MSI (s) (7C:5C) [04:47:38:951]: Note: 1: 1402 2: HKEY_CLASSES_ROOT\.3 (x64)) 3: 2
            MSI (s) (7C:5C) [04:47:38:951]: Executing op: ShortcutCreate(Name=iopypstq|Database directory (MariaDB 10.3 (x64)),,,FileName=C:\Program Files\MariaDB 10.3\data\,,,,,,,,,,,)
            CreateShortcuts: Shortcut: iopypstq|Database directory (MariaDB 10.3 (x64))
            MSI (s) (7C:5C) [04:47:38:951]: Note: 1: 1402 2: HKEY_CLASSES_ROOT\.3 (x64)) 3: 2
            MSI (s) (7C:5C) [04:47:38:951]: Executing op: ShortcutCreate(Name=4rwooyg8|MySQL Client (MariaDB 10.3 (x64)),,,FileName=C:\Windows\system32\cmd.exe,Arguments=/k " "C:\Program Files\MariaDB 10.3\bin\mysql.exe" "--defaults-file=C:\Program Files\MariaDB 10.3\data\my.ini" -uroot -p",WorkingDir=C:\Program Files\MariaDB 10.3\bin\,,,,,Description=Starts mysql.exe for root user,,,,)
            CreateShortcuts: Shortcut: 4rwooyg8|MySQL Client (MariaDB 10.3 (x64))
            MSI (s) (7C:5C) [04:47:38:951]: Note: 1: 1402 2: HKEY_CLASSES_ROOT\.3 (x64)) 3: 2
            MSI (s) (7C:5C) [04:47:38:951]: Executing op: ShortcutCreate(Name=sovdb45c|Command Prompt (MariaDB 10.3 (x64)),,,FileName=C:\Windows\system32\cmd.exe,Arguments=/k "set MYSQL_HOME=C:\Program Files\MariaDB 10.3\data\&& set PATH=C:\Program Files\MariaDB 10.3\bin\;%PATH%;&&echo Setting environment for MariaDB 10.3 (x64) ",,,,,,Description=Opens command line in the installation bin directory,,,,)
            CreateShortcuts: Shortcut: sovdb45c|Command Prompt (MariaDB 10.3 (x64))
            MSI (s) (7C:5C) [04:47:38:951]: Note: 1: 1402 2: HKEY_CLASSES_ROOT\.3 (x64)) 3: 2
            MSI (s) (7C:5C) [04:47:38:951]: Executing op: ActionStart(Name=WriteRegistryValues,Description=Writing system registry values,Template=Key: [1], Name: [2], Value: [3])
            Action 4:47:38: WriteRegistryValues. Writing system registry values
            MSI (s) (7C:5C) [04:47:38:951]: Executing op: ProgressTotal(Total=16,Type=1,ByteEquivalent=13200)
            MSI (s) (7C:5C) [04:47:38:951]: Executing op: RegOpenKey(Root=-2147483647,Key=Software\MariaDB 10.3 (x64)\Uninstall,,BinaryType=1,,)
            MSI (s) (7C:5C) [04:47:38:951]: Executing op: RegAddValue(Name=shortcuts,Value=1,)
            WriteRegistryValues: Key: \Software\MariaDB 10.3 (x64)\Uninstall, Name: shortcuts, Value: 1
            MSI (s) (7C:5C) [04:47:38:951]: Executing op: RegAddValue(Name=shortcuts.commandline,Value=1,)
            WriteRegistryValues: Key: \Software\MariaDB 10.3 (x64)\Uninstall, Name: shortcuts.commandline, Value: 1
            MSI (s) (7C:5C) [04:47:38:966]: Executing op: RegAddValue(Name=shortcuts.commandprompt.db,Value=1,)
            WriteRegistryValues: Key: \Software\MariaDB 10.3 (x64)\Uninstall, Name: shortcuts.commandprompt.db, Value: 1
            MSI (s) (7C:5C) [04:47:38:966]: Executing op: RegOpenKey(Root=-2147483646,Key=SOFTWARE\MariaDB 10.3 (x64),,BinaryType=1,,)
            MSI (s) (7C:5C) [04:47:38:966]: Executing op: RegAddValue(Name=DATADIR,Value=C:\Program Files\MariaDB 10.3\data\,)
            WriteRegistryValues: Key: \SOFTWARE\MariaDB 10.3 (x64), Name: DATADIR, Value: C:\Program Files\MariaDB 10.3\data\
            MSI (s) (7C:5C) [04:47:38:966]: Executing op: RegAddValue(Name=InstalledBy,Value=DESKTOP-73DO6HI\Moh'd N. Alfayez,)
            WriteRegistryValues: Key: \SOFTWARE\MariaDB 10.3 (x64), Name: InstalledBy, Value: DESKTOP-73DO6HI\Moh'd N. Alfayez
            MSI (s) (7C:5C) [04:47:38:966]: Executing op: RegAddValue(Name=SERVICENAME,Value=MySQL,)
            WriteRegistryValues: Key: \SOFTWARE\MariaDB 10.3 (x64), Name: SERVICENAME, Value: MySQL
            MSI (s) (7C:5C) [04:47:38:966]: Executing op: RegAddValue(Name=STDCONFIG,Value=1,)
            WriteRegistryValues: Key: \SOFTWARE\MariaDB 10.3 (x64), Name: STDCONFIG, Value: 1
            MSI (s) (7C:5C) [04:47:38:966]: Executing op: RegAddValue(Name=UTF8,Value=1,)
            WriteRegistryValues: Key: \SOFTWARE\MariaDB 10.3 (x64), Name: UTF8, Value: 1
            MSI (s) (7C:5C) [04:47:38:966]: Executing op: RegAddValue(Name=INSTALLDIR,Value=C:\Program Files\MariaDB 10.3\,)
            WriteRegistryValues: Key: \SOFTWARE\MariaDB 10.3 (x64), Name: INSTALLDIR, Value: C:\Program Files\MariaDB 10.3\
            MSI (s) (7C:5C) [04:47:38:966]: Executing op: RegOpenKey(Root=-2147483646,Key=Software\Microsoft\Windows\CurrentVersion\Uninstall\MariaDB 10.3 (x64),,BinaryType=1,,)
            MSI (s) (7C:5C) [04:47:38:966]: Executing op: RegAddValue(Name=DisplayName,Value=MariaDB 10.3 (x64),)
            WriteRegistryValues: Key: \Software\Microsoft\Windows\CurrentVersion\Uninstall\MariaDB 10.3 (x64), Name: DisplayName, Value: MariaDB 10.3 (x64)
            MSI (s) (7C:5C) [04:47:38:966]: Executing op: RegAddValue(Name=Publisher,Value=MariaDB Corporation Ab,)
            WriteRegistryValues: Key: \Software\Microsoft\Windows\CurrentVersion\Uninstall\MariaDB 10.3 (x64), Name: Publisher, Value: MariaDB Corporation Ab
            MSI (s) (7C:5C) [04:47:38:966]: Executing op: RegAddValue(Name=DisplayVersion,Value=10.3.8.0,)
            WriteRegistryValues: Key: \Software\Microsoft\Windows\CurrentVersion\Uninstall\MariaDB 10.3 (x64), Name: DisplayVersion, Value: 10.3.8.0
            MSI (s) (7C:5C) [04:47:38:966]: Executing op: RegAddValue(Name=InstallLocation,Value=C:\Program Files\MariaDB 10.3\,)
            WriteRegistryValues: Key: \Software\Microsoft\Windows\CurrentVersion\Uninstall\MariaDB 10.3 (x64), Name: InstallLocation, Value: C:\Program Files\MariaDB 10.3\
            MSI (s) (7C:5C) [04:47:38:966]: Executing op: RegAddValue(Name=UninstallString,Value=msiexec.exe /I

            {78EFDFD5-B2C0-4416-86BC-BFAC9A34F406},)
            WriteRegistryValues: Key: \Software\Microsoft\Windows\CurrentVersion\Uninstall\MariaDB 10.3 (x64), Name: UninstallString, Value: msiexec.exe /I {78EFDFD5-B2C0-4416-86BC-BFAC9A34F406}

            MSI (s) (7C:5C) [04:47:38:966]: Executing op: RegAddValue(Name=MajorVersion,Value=10,)
            WriteRegistryValues: Key: \Software\Microsoft\Windows\CurrentVersion\Uninstall\MariaDB 10.3 (x64), Name: MajorVersion, Value: 10
            MSI (s) (7C:5C) [04:47:38:966]: Executing op: RegAddValue(Name=MinorVersion,Value=3,)
            WriteRegistryValues: Key: \Software\Microsoft\Windows\CurrentVersion\Uninstall\MariaDB 10.3 (x64), Name: MinorVersion, Value: 3
            MSI (s) (7C:5C) [04:47:38:966]: Executing op: ActionStart(Name=WriteIniValues,Description=Writing INI files values,Template=File: [1], Section: [2], Key: [3], Value: [4])
            Action 4:47:38: WriteIniValues. Writing INI files values
            MSI (s) (7C:5C) [04:47:38:966]: Executing op: ProgressTotal(Total=2,Type=1,ByteEquivalent=13200)
            MSI (s) (7C:5C) [04:47:38:966]: Executing op: IniFilePath(File=my.ini,Folder=C:\Program Files\MariaDB 10.3\data)
            MSI (s) (7C:5C) [04:47:38:966]: Executing op: IniWriteRemoveValue(Section=mysqld,Key=innodb_buffer_pool_size,Value=2035M,Mode=1)
            WriteIniValues: File: my.ini, Section: mysqld, Key: innodb_buffer_pool_size, Value: 2035M
            MSI (s) (7C:5C) [04:47:38:966]: Executing op: IniWriteRemoveValue(Section=mysqld,Key=character-set-server,Value=utf8,Mode=1)
            WriteIniValues: File: my.ini, Section: mysqld, Key: character-set-server, Value: utf8
            MSI (s) (7C:5C) [04:47:38:982]: Executing op: ActionStart(Name=ExecSecureObjects_64,,)
            Action 4:47:38: ExecSecureObjects_64.
            MSI (s) (7C:5C) [04:47:38:982]: Executing op: CustomActionSchedule(Action=ExecSecureObjects_64,ActionType=11265,Source=BinaryData,Target=*********,CustomActionData=*********)
            MSI (s) (7C:6C) [04:47:38:982]: Invoking remote custom action. DLL: C:\Windows\Installer\MSI79A1.tmp, Entrypoint: ExecSecureObjects
            MSI (s) (7C:B4) [04:47:38:982]: Generating random cookie.
            MSI (s) (7C:B4) [04:47:38:982]: Created Custom Action Server with PID 7864 (0x1EB8).
            MSI (s) (7C:AC) [04:47:38:998]: Running as a service.
            MSI (s) (7C:AC) [04:47:38:998]: Hello, I'm your 64bit Elevated Non-remapped custom action server.
            MSI (s) (7C:5C) [04:47:39:029]: Executing op: ActionStart(Name=StartServices,Description=Starting services,Template=Service: [1])
            Action 4:47:39: StartServices. Starting services
            MSI (s) (7C:5C) [04:47:39:029]: Executing op: ProgressTotal(Total=1,Type=1,ByteEquivalent=1300000)
            MSI (s) (7C:5C) [04:47:39:029]: Executing op: ServiceControl(,Name=MySQL,Action=1,Wait=1,)
            StartServices: Service: MySQL

            mohd.alfayez Mohammed Alfayez added a comment - here is the last few lines of the log and i attached the log file Action 4:47:38: CreateShortcuts. Creating shortcuts MSI (s) (7C:5C) [04:47:38:928] : Executing op: SetTargetFolder(Folder=23\MariaDB 10.3 (x64)) MSI (s) (7C:5C) [04:47:38:928] : SHELL32::SHGetFolderPath returned: C:\ProgramData\Microsoft\Windows\Start Menu\Programs MSI (s) (7C:5C) [04:47:38:928] : Executing op: ShortcutCreate(Name=hjcjcpxn|my.ini (MariaDB 10.3 (x64)),,,FileName=C:\Windows\system32\notepad.exe,Arguments="C:\Program Files\MariaDB 10.3\data\my.ini",,,,,,Description=Edit database configuration,,,,) CreateShortcuts: Shortcut: hjcjcpxn|my.ini (MariaDB 10.3 (x64)) MSI (s) (7C:5C) [04:47:38:928] : Note: 1: 1402 2: HKEY_CLASSES_ROOT\.3 (x64)) 3: 2 MSI (s) (7C:5C) [04:47:38:951] : Executing op: ShortcutCreate(Name=moc4xjbe|Error log (MariaDB 10.3 (x64)),,,FileName=C:\Windows\system32\notepad.exe,Arguments="C:\Program Files\MariaDB 10.3\data\DESKTOP-73DO6HI.err",,,,,,Description=View Database Error log,,,,) CreateShortcuts: Shortcut: moc4xjbe|Error log (MariaDB 10.3 (x64)) MSI (s) (7C:5C) [04:47:38:951] : Note: 1: 1402 2: HKEY_CLASSES_ROOT\.3 (x64)) 3: 2 MSI (s) (7C:5C) [04:47:38:951] : Executing op: ShortcutCreate(Name=iopypstq|Database directory (MariaDB 10.3 (x64)),,,FileName=C:\Program Files\MariaDB 10.3\data\,,,,,,,,,,,) CreateShortcuts: Shortcut: iopypstq|Database directory (MariaDB 10.3 (x64)) MSI (s) (7C:5C) [04:47:38:951] : Note: 1: 1402 2: HKEY_CLASSES_ROOT\.3 (x64)) 3: 2 MSI (s) (7C:5C) [04:47:38:951] : Executing op: ShortcutCreate(Name=4rwooyg8|MySQL Client (MariaDB 10.3 (x64)),,,FileName=C:\Windows\system32\cmd.exe,Arguments=/k " "C:\Program Files\MariaDB 10.3\bin\mysql.exe" "--defaults-file=C:\Program Files\MariaDB 10.3\data\my.ini" -uroot -p",WorkingDir=C:\Program Files\MariaDB 10.3\bin\,,,,,Description=Starts mysql.exe for root user,,,,) CreateShortcuts: Shortcut: 4rwooyg8|MySQL Client (MariaDB 10.3 (x64)) MSI (s) (7C:5C) [04:47:38:951] : Note: 1: 1402 2: HKEY_CLASSES_ROOT\.3 (x64)) 3: 2 MSI (s) (7C:5C) [04:47:38:951] : Executing op: ShortcutCreate(Name=sovdb45c|Command Prompt (MariaDB 10.3 (x64)),,,FileName=C:\Windows\system32\cmd.exe,Arguments=/k "set MYSQL_HOME=C:\Program Files\MariaDB 10.3\data\&& set PATH=C:\Program Files\MariaDB 10.3\bin\;%PATH%;&&echo Setting environment for MariaDB 10.3 (x64) ",,,,,,Description=Opens command line in the installation bin directory,,,,) CreateShortcuts: Shortcut: sovdb45c|Command Prompt (MariaDB 10.3 (x64)) MSI (s) (7C:5C) [04:47:38:951] : Note: 1: 1402 2: HKEY_CLASSES_ROOT\.3 (x64)) 3: 2 MSI (s) (7C:5C) [04:47:38:951] : Executing op: ActionStart(Name=WriteRegistryValues,Description=Writing system registry values,Template=Key: [1] , Name: [2] , Value: [3] ) Action 4:47:38: WriteRegistryValues. Writing system registry values MSI (s) (7C:5C) [04:47:38:951] : Executing op: ProgressTotal(Total=16,Type=1,ByteEquivalent=13200) MSI (s) (7C:5C) [04:47:38:951] : Executing op: RegOpenKey(Root=-2147483647,Key=Software\MariaDB 10.3 (x64)\Uninstall,,BinaryType=1,,) MSI (s) (7C:5C) [04:47:38:951] : Executing op: RegAddValue(Name=shortcuts,Value=1,) WriteRegistryValues: Key: \Software\MariaDB 10.3 (x64)\Uninstall, Name: shortcuts, Value: 1 MSI (s) (7C:5C) [04:47:38:951] : Executing op: RegAddValue(Name=shortcuts.commandline,Value=1,) WriteRegistryValues: Key: \Software\MariaDB 10.3 (x64)\Uninstall, Name: shortcuts.commandline, Value: 1 MSI (s) (7C:5C) [04:47:38:966] : Executing op: RegAddValue(Name=shortcuts.commandprompt.db,Value=1,) WriteRegistryValues: Key: \Software\MariaDB 10.3 (x64)\Uninstall, Name: shortcuts.commandprompt.db, Value: 1 MSI (s) (7C:5C) [04:47:38:966] : Executing op: RegOpenKey(Root=-2147483646,Key=SOFTWARE\MariaDB 10.3 (x64),,BinaryType=1,,) MSI (s) (7C:5C) [04:47:38:966] : Executing op: RegAddValue(Name=DATADIR,Value=C:\Program Files\MariaDB 10.3\data\,) WriteRegistryValues: Key: \SOFTWARE\MariaDB 10.3 (x64), Name: DATADIR, Value: C:\Program Files\MariaDB 10.3\data\ MSI (s) (7C:5C) [04:47:38:966] : Executing op: RegAddValue(Name=InstalledBy,Value=DESKTOP-73DO6HI\Moh'd N. Alfayez,) WriteRegistryValues: Key: \SOFTWARE\MariaDB 10.3 (x64), Name: InstalledBy, Value: DESKTOP-73DO6HI\Moh'd N. Alfayez MSI (s) (7C:5C) [04:47:38:966] : Executing op: RegAddValue(Name=SERVICENAME,Value=MySQL,) WriteRegistryValues: Key: \SOFTWARE\MariaDB 10.3 (x64), Name: SERVICENAME, Value: MySQL MSI (s) (7C:5C) [04:47:38:966] : Executing op: RegAddValue(Name=STDCONFIG,Value=1,) WriteRegistryValues: Key: \SOFTWARE\MariaDB 10.3 (x64), Name: STDCONFIG, Value: 1 MSI (s) (7C:5C) [04:47:38:966] : Executing op: RegAddValue(Name=UTF8,Value=1,) WriteRegistryValues: Key: \SOFTWARE\MariaDB 10.3 (x64), Name: UTF8, Value: 1 MSI (s) (7C:5C) [04:47:38:966] : Executing op: RegAddValue(Name=INSTALLDIR,Value=C:\Program Files\MariaDB 10.3\,) WriteRegistryValues: Key: \SOFTWARE\MariaDB 10.3 (x64), Name: INSTALLDIR, Value: C:\Program Files\MariaDB 10.3\ MSI (s) (7C:5C) [04:47:38:966] : Executing op: RegOpenKey(Root=-2147483646,Key=Software\Microsoft\Windows\CurrentVersion\Uninstall\MariaDB 10.3 (x64),,BinaryType=1,,) MSI (s) (7C:5C) [04:47:38:966] : Executing op: RegAddValue(Name=DisplayName,Value=MariaDB 10.3 (x64),) WriteRegistryValues: Key: \Software\Microsoft\Windows\CurrentVersion\Uninstall\MariaDB 10.3 (x64), Name: DisplayName, Value: MariaDB 10.3 (x64) MSI (s) (7C:5C) [04:47:38:966] : Executing op: RegAddValue(Name=Publisher,Value=MariaDB Corporation Ab,) WriteRegistryValues: Key: \Software\Microsoft\Windows\CurrentVersion\Uninstall\MariaDB 10.3 (x64), Name: Publisher, Value: MariaDB Corporation Ab MSI (s) (7C:5C) [04:47:38:966] : Executing op: RegAddValue(Name=DisplayVersion,Value=10.3.8.0,) WriteRegistryValues: Key: \Software\Microsoft\Windows\CurrentVersion\Uninstall\MariaDB 10.3 (x64), Name: DisplayVersion, Value: 10.3.8.0 MSI (s) (7C:5C) [04:47:38:966] : Executing op: RegAddValue(Name=InstallLocation,Value=C:\Program Files\MariaDB 10.3\,) WriteRegistryValues: Key: \Software\Microsoft\Windows\CurrentVersion\Uninstall\MariaDB 10.3 (x64), Name: InstallLocation, Value: C:\Program Files\MariaDB 10.3\ MSI (s) (7C:5C) [04:47:38:966] : Executing op: RegAddValue(Name=UninstallString,Value=msiexec.exe /I {78EFDFD5-B2C0-4416-86BC-BFAC9A34F406},) WriteRegistryValues: Key: \Software\Microsoft\Windows\CurrentVersion\Uninstall\MariaDB 10.3 (x64), Name: UninstallString, Value: msiexec.exe /I {78EFDFD5-B2C0-4416-86BC-BFAC9A34F406} MSI (s) (7C:5C) [04:47:38:966] : Executing op: RegAddValue(Name=MajorVersion,Value=10,) WriteRegistryValues: Key: \Software\Microsoft\Windows\CurrentVersion\Uninstall\MariaDB 10.3 (x64), Name: MajorVersion, Value: 10 MSI (s) (7C:5C) [04:47:38:966] : Executing op: RegAddValue(Name=MinorVersion,Value=3,) WriteRegistryValues: Key: \Software\Microsoft\Windows\CurrentVersion\Uninstall\MariaDB 10.3 (x64), Name: MinorVersion, Value: 3 MSI (s) (7C:5C) [04:47:38:966] : Executing op: ActionStart(Name=WriteIniValues,Description=Writing INI files values,Template=File: [1] , Section: [2] , Key: [3] , Value: [4] ) Action 4:47:38: WriteIniValues. Writing INI files values MSI (s) (7C:5C) [04:47:38:966] : Executing op: ProgressTotal(Total=2,Type=1,ByteEquivalent=13200) MSI (s) (7C:5C) [04:47:38:966] : Executing op: IniFilePath(File=my.ini,Folder=C:\Program Files\MariaDB 10.3\data) MSI (s) (7C:5C) [04:47:38:966] : Executing op: IniWriteRemoveValue(Section=mysqld,Key=innodb_buffer_pool_size,Value=2035M,Mode=1) WriteIniValues: File: my.ini, Section: mysqld, Key: innodb_buffer_pool_size, Value: 2035M MSI (s) (7C:5C) [04:47:38:966] : Executing op: IniWriteRemoveValue(Section=mysqld,Key=character-set-server,Value=utf8,Mode=1) WriteIniValues: File: my.ini, Section: mysqld, Key: character-set-server, Value: utf8 MSI (s) (7C:5C) [04:47:38:982] : Executing op: ActionStart(Name=ExecSecureObjects_64,,) Action 4:47:38: ExecSecureObjects_64. MSI (s) (7C:5C) [04:47:38:982] : Executing op: CustomActionSchedule(Action=ExecSecureObjects_64,ActionType=11265,Source=BinaryData,Target=********* ,CustomActionData= *********) MSI (s) (7C:6C) [04:47:38:982] : Invoking remote custom action. DLL: C:\Windows\Installer\MSI79A1.tmp, Entrypoint: ExecSecureObjects MSI (s) (7C:B4) [04:47:38:982] : Generating random cookie. MSI (s) (7C:B4) [04:47:38:982] : Created Custom Action Server with PID 7864 (0x1EB8). MSI (s) (7C:AC) [04:47:38:998] : Running as a service. MSI (s) (7C:AC) [04:47:38:998] : Hello, I'm your 64bit Elevated Non-remapped custom action server. MSI (s) (7C:5C) [04:47:39:029] : Executing op: ActionStart(Name=StartServices,Description=Starting services,Template=Service: [1] ) Action 4:47:39: StartServices. Starting services MSI (s) (7C:5C) [04:47:39:029] : Executing op: ProgressTotal(Total=1,Type=1,ByteEquivalent=1300000) MSI (s) (7C:5C) [04:47:39:029] : Executing op: ServiceControl(,Name=MySQL,Action=1,Wait=1,) StartServices: Service: MySQL

            and i attached the screenshoot of the error when starting the services from MSI

            mohd.alfayez Mohammed Alfayez added a comment - and i attached the screenshoot of the error when starting the services from MSI

            Thanks, very helpful.

            Indeed, I missed something in my patch, now hopefully fixed.
            I updated https://1drv.ms/u/s!AqT4tBcElQz_j4g75pDgGhtV-n0JWg with the new MSI. If you can test it, thatd be great.

            wlad Vladislav Vaintroub added a comment - Thanks, very helpful. Indeed, I missed something in my patch, now hopefully fixed. I updated https://1drv.ms/u/s!AqT4tBcElQz_j4g75pDgGhtV-n0JWg with the new MSI. If you can test it, thatd be great.

            GREAT NEWS

            Its successfully installed and work perfectly

            Thank you so much

            mohd.alfayez Mohammed Alfayez added a comment - GREAT NEWS Its successfully installed and work perfectly Thank you so much

            People

              wlad Vladislav Vaintroub
              mohd.alfayez Mohammed Alfayez
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.